[package]
name = "fractalbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.15.1"
winit = "0.28.2"
